# 3d_rotation_study

./: CMakeLists.txt  README.md  gtsam_ypr.cpp  main.cpp
